--- a/dim-core/Cargo.toml
+++ b/dim-core/Cargo.toml
@@ -45,7 +45,7 @@ ignore = "0.4.20"
 image = "0.24.3"
 itertools = "0.10.3"
 lazy_static = "1.4.0"
-libsqlite3-sys = { version = "^0.24.0" }
+libsqlite3-sys = { version = "0.26.0" }
 notify = "5.0.0"
 once_cell = "1.8.0"
 parking_lot = "0.12.0"
@@ -56,9 +56,9 @@ reqwest = { version = "0.11.0", features = [
     "rustls-tls",
     "brotli",
 ], default-features = false }
-rusqlite = { version = "0.27.0", features = ["hooks"] }
+rusqlite = { version = "0.29.0", features = ["hooks"] }
 rust-embed = "^5.9.0"
-sqlx = { version = "0.5", features = ["runtime-tokio-rustls"] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls"] }
 thiserror = "1.0.30"
 tokio = { version = "1", features = ["rt", "signal", "full", "tracing"] }
 tokio-stream = "0.1.12"
