make it compile

--- a/dim-web/Cargo.toml
+++ b/dim-web/Cargo.toml
@@ -3,6 +3,10 @@ name = "dim-web"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = []
+embed_ui = []
+
 [dependencies]
 dim-database = { path = "../dim-database" }
 dim-utils = { path = "../dim-utils" }
