--- a/dim-core/Cargo.toml
+++ b/dim-core/Cargo.toml
@@ -49,6 +49,7 @@ image = "0.24.3"
 itertools = "0.10.3"
 lazy_static = "1.4.0"
 libsqlite3-sys = { version = "^0.24.0" }
+ignore = "0.4"
 notify = "5.0.0"
 once_cell = "1.8.0"
 parking_lot = "0.12.0"
