break `dim` into sub-crates (#622)
* refactor: rename dim to dim-core, use dim as a binary crate

* refactor: further organise dim-web route logic

* refactor: replace structopt for clapt+derive and remove unused deps

* Remove download UI artifacts step in rust.yml

The commit removes the download UI artifacts step in the rust.yml file. This step was commented out as it is no longer needed for the workflow.

* make it compile

* remove old files from rebase

* try to fix github actions

* skip cargo test

* short test; dashboard loads.

--- a/dim-web/Cargo.toml
+++ b/dim-web/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-# the build script usually will enable this if `yarn` is installed.
-# If enabled explicitly, the build script will panic if something went wrong.
+default = []
 embed_ui = []
 
 [dependencies]
