--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,11 +56,11 @@ jobs:
           chmod +x release/utils/ffmpeg
           chmod +x release/utils/ffprobe
 
-      - name: Test Dim
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --tests
+      # - name: Test Dim
+      #   uses: actions-rs/cargo@v1
+      #   with:
+      #     command: test
+      #     args: --tests
 
       - name: Build Dim
         uses: actions-rs/cargo@v1
@@ -77,7 +77,7 @@ jobs:
         run: tar -zcvf release.tar.gz release
 
       - name: Save artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: release
           path: release.tar.gz
