--- a/dim-core/Cargo.toml
+++ b/dim-core/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 
 [features]
 vaapi = ["nightfall/vaapi"]
+# the build script usually will enable this if `yarn` is installed.
+# If enabled explicitly, the build script will panic if something went wrong.
+embed_ui = []
 
 [dependencies]
 # git dependencies
@@ -32,20 +35,21 @@ serde_derive = "^1.0.125"
 serde_json = "^1.0.64"
 
 async-trait = "0.1.50"
-axum = { version = "0.6.20" }
+bytes = "1.0.1"
 cfg-if = "1.0.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 dia-i18n = "0.10.0"
 displaydoc = "0.2.3"
+dominant_color = "0.3.0"
 futures = "0.3.14"
 fuzzy-matcher = "0.3.7"
 http = "^0.2.3"
 hyper = "0.14.20"
-ignore = "0.4.20"
 image = "0.24.3"
 itertools = "0.10.3"
 lazy_static = "1.4.0"
 libsqlite3-sys = { version = "^0.24.0" }
+ignore = "0.4"
 notify = "5.0.0"
 once_cell = "1.8.0"
 parking_lot = "0.12.0"
@@ -73,6 +77,8 @@ tracing-subscriber = { version = "^0.3.10", features = [
 ] }
 url = "2.2.2"
 uuid = { version = "1.2.2", features = ["v4"] }
+walkdir = "2.3.1"
+warp = { version = "0.3.3", features = ["tls", "tokio-rustls"] }
 xmlwriter = "0.1.0"
 xtra = { version = "0.5.1", features = ["tokio", "with-tokio-1"] }
 
